--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,3 +45,37 @@ ul.crossmark {
     list-style: none;
     padding-left: 0;
 }
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    transition: all 0.3s ease-in-out;
+}
+
+nav a:hover {
+    color: #ff0;
+}
